--- a/HomeTask1/courses-app/src/app/features/courses/courses.component.html
+++ b/HomeTask1/courses-app/src/app/features/courses/courses.component.html
@@ -2,7 +2,7 @@
     <div class="d-flex">
         <strong class="username">Ravi Teja</strong>
         <div>
-            <app-button [buttonClass]="'btn btn-outline-danger'" [buttonText]="'Logout'" (emitButtonClick)="updateModalStatus($event)">
+            <app-button [buttonClass]="'btn btn-outline-danger'" [buttonText]="buttonText.LOGOUT" (emitButtonClick)="updateModalStatus($event)">
             </app-button>
         </div>
     </div> 
@@ -11,10 +11,10 @@
 <div class="main_content">
     <app-course-list *ngIf="coursesList" [courseList]="coursesList" [isCoursesEditable]="isCoursesEditable"></app-course-list>
     <app-info *ngIf="!coursesList">
-        <app-button [buttonClass]="'btn btn-outline-warning'" [buttonText]="'Add new course'"></app-button>
+        <app-button [buttonClass]="'btn btn-outline-warning'" [buttonText]="buttonText.NEWCOURSE"></app-button>
     </app-info>
 </div>
 
-<app-confirmation-modal [title]="'Logout'" [okButtonText]="'Confirm'" [cancelButtonText]="'Cancel'" *ngIf="showModal">
+<app-confirmation-modal [title]="'Logout'" [okButtonText]="buttonText.CONFIRM" [cancelButtonText]="buttonText.CANCEL" *ngIf="showModal">
     <ng-container>Are you sure to Logout.?</ng-container>
 </app-confirmation-modal>
