--- a/HomeTask2/courses-app/src/app/features/login/login.component.html
+++ b/HomeTask2/courses-app/src/app/features/login/login.component.html
@@ -36,6 +36,6 @@
         </app-button> -->
         <button type="submit" class="btn btn-outline-primary">Login</button>
     </div>
-    <div class="login__note text-center">If you don't have an account you can <a
-            href="#">Register</a></div>
+    <div class="login__note text-center">If you don't have an account you can 
+        <a routerLink="/registration">Register</a></div>
 </form>
