--- a/HomeTask2/courses-app/src/app/features/registration/registration.component.html
+++ b/HomeTask2/courses-app/src/app/features/registration/registration.component.html
@@ -44,8 +44,8 @@
     <div class="registration__button text-center">
         <!-- <app-button [buttonClass]="'btn btn-outline-primary'" [buttonText]="buttonText.registration" [buttonType]="buttonText.SUBMIT_TYPE">
         </app-button> -->
-        <button type="submit" class="btn btn-outline-primary">Registration</button>
+        <button type="submit" class="btn btn-outline-primary">Register</button>
     </div>
     <div class="registration__note text-center">If you don't have an account you
-        can <a href="#">Login</a></div>
+        can <a routerLink="/login">Login</a></div>
 </form>
