--- a/HomeTask2/courses-app/src/app/shared/components/button/button.component.html
+++ b/HomeTask2/courses-app/src/app/shared/components/button/button.component.html
@@ -1,4 +1,8 @@
-<button type="{{ buttonType }}" class="{{ buttonClass }}" data-bs-toggle="modal" data-bs-target="#exampleModal" (click)="clickHandler()">
+<button *ngIf="!showModal" type="{{ buttonType }}" class="{{ buttonClass }}" (click)="clickHandler()">
+    <ng-template [ngIf]="buttonText != ''">{{buttonText}}</ng-template>
+    <ng-template [ngIf]="iconName != ''"><fa-icon [icon]="iconName"></fa-icon></ng-template>
+</button>
+<button *ngIf="showModal" type="{{ buttonType }}" class="{{ buttonClass }}" data-bs-toggle="modal" data-bs-target="#exampleModal" (click)="clickHandler()">
     <ng-template [ngIf]="buttonText != ''">{{buttonText}}</ng-template>
     <ng-template [ngIf]="iconName != ''"><fa-icon [icon]="iconName"></fa-icon></ng-template>
 </button>
