--- a/HomeTask2/courses-app/src/app/shared/components/course-form/course-form.component.css
+++ b/HomeTask2/courses-app/src/app/shared/components/course-form/course-form.component.css
@@ -1,7 +1,7 @@
-/* .courses-form {
+.courses-form {
   border: 2px solid #95cee8;
   margin: 1rem;
-} */
+}
 
 input {
   border: 2px solid rgba(243, 160, 86, 255);
