--- a/HomeTask2/courses-app/src/app/features/courses/courses.component.html
+++ b/HomeTask2/courses-app/src/app/features/courses/courses.component.html
@@ -1,13 +1,15 @@
 
 <div class="main_content">
-    <!-- <app-course-list *ngIf="coursesList" [courseList]="coursesList" [isCoursesEditable]="isCoursesEditable"></app-course-list>
-    <app-info *ngIf="!coursesList">
-        <app-button [buttonClass]="'btn btn-outline-warning'" [buttonText]="buttonText.NEWCOURSE"></app-button>
-    </app-info> -->
-    <app-course-form></app-course-form>
+    <app-course-list *ngIf="coursesList.length" [courseList]="coursesList"></app-course-list>
+    <app-info *ngIf="!coursesList.length && !isLoading">
+        <app-button routerLink="add" [buttonClass]="'btn btn-outline-warning'" [buttonText]="buttonText.NEWCOURSE"></app-button>
+    </app-info>
+</div>
+
+<div *ngIf="isLoading" class="d-flex justify-content-center">
+    <div class="spinner-border" role="status">
+      <span class="visually-hidden">Loading...</span>
+    </div>
 </div>
 
 
-<app-confirmation-modal [title]="'Logout'" [okButtonText]="buttonText.CONFIRM" [cancelButtonText]="buttonText.CANCEL" *ngIf="showModal">
-    <ng-container>Are you sure to Logout.?</ng-container>
-</app-confirmation-modal>
