--- a/HomeTask2/courses-app/src/app/shared/components/confirmation-modal/confirmation-modal.component.html
+++ b/HomeTask2/courses-app/src/app/shared/components/confirmation-modal/confirmation-modal.component.html
@@ -5,7 +5,7 @@
         <div class="modal-content">
             <div class="modal-header">
                 <h5 class="modal-title" id="exampleModalLabel">{{title}}</h5>
-                <button type="button" class="btn-close" data-bs-dismiss="modal"
+                <button type="button" id="close" class="btn-close" data-bs-dismiss="modal"
                     aria-label="Close"></button>
             </div>
             <div class="modal-body">
@@ -14,7 +14,7 @@
             <div class="modal-footer">
                 <button type="button" class="btn btn-outline-secondary"
                     data-bs-dismiss="modal">{{cancelButtonText}}</button>
-                <button type="button" class="btn btn-primary">{{okButtonText}}</button>
+                <button type="button" class="btn btn-primary" (click)="clickHandler()">{{okButtonText}}</button>
                 </div>
         </div>
     </div>
