--- a/HomeTask2/courses-app/src/app/shared/components/course-list/course-list.component.html
+++ b/HomeTask2/courses-app/src/app/shared/components/course-list/course-list.component.html
@@ -6,7 +6,7 @@
         </div>
         <div class="col-4 text-end" *ngIf="isAdmin">
             <app-button routerLink="add" [buttonClass]="'btn btn-outline-primary'"
-                        [buttonText]="buttonText.CREATE_COURSE"
+                        [buttonText]="buttonText.NEWCOURSE"
                         ></app-button>
         </div>
     </div>
