--- a/HomeTask2/courses-app/src/app/features/course/course.component.html
+++ b/HomeTask2/courses-app/src/app/features/course/course.component.html
@@ -1,5 +1,5 @@
 
-<div class="course_info">
+<div *ngIf="!isLoading" class="course_info">
     <app-button (emitButtonClick)="goBack()" [buttonClass]="'btn btn-outline-secondary'" [buttonText]="buttonText.BACK_TO_COURSES"></app-button>
     <div class='course_info_title text-center'>
         <h1>{{course.title}}</h1>
@@ -21,5 +21,11 @@
                 <strong>Authors</strong>:{{course.authors | getAuthorsName | stringJoiner: ', '}}
             </div>
         </div>
+    </div>
+</div>
+
+<div *ngIf="isLoading" class="d-flex justify-content-center">
+    <div class="spinner-border" role="status">
+      <span class="visually-hidden">Loading...</span>
     </div>
 </div>
