--- a/HomeTask2/courses-app/src/app/shared/components/course-card/course-card.component.html
+++ b/HomeTask2/courses-app/src/app/shared/components/course-card/course-card.component.html
@@ -1,4 +1,4 @@
-<section *ngIf="!isLoading" class='course'>
+<section *ngIf='!isLoading' class='course'>
     <div class='row'>
         <div class='col-8'>
             <h3>{{course.title}}</h3>
